test/Fail/IdiomBracketsNotInScope.err
IdiomBracketsNotInScope.agda:12,10-21: error: [GenericError]
_<*>_ needs to be in scope to use idiom brackets ⦇ ... ⦈
when scope checking ⦇ suc a ⦈
